kubernetes/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-frontend
  template:
    metadata:
      labels:
        app: books-frontend
    spec:
      containers:
        - name: books-frontend
          image: fhernandez004/books_frontend:latest
          # You can also use IfNotPresent but it might lead to old images
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
