kubernetes/deployment-get.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-get
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-get
  template:
    metadata:
      labels:
        app: books-get
    spec:
      containers:
        - name: books-get
          image: fhernandez004/books_get:latest
          # You can also use IfNotPresent but it might lead to old images
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
