kubernetes/deployment-put.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books-put
spec:
  replicas: 1
  selector:
    matchLabels:
      app: books-put
  template:
    metadata:
      labels:
        app: books-put
    spec:
      containers:
        - name: books-put
          image: fhernandez004/books_put:latest
          # You can also use IfNotPresent but it might lead to old images
          imagePullPolicy: "Always"
          ports:
            - containerPort: 3030
