kubernetes/service-delete.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-delete-service
spec:
  type: ClusterIP
  ports:
    - name: books-delete-endpoint
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: books-delete
