kubernetes/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-frontend-service
spec:
  type: ClusterIP
  ports:
    - name: books-frontend-endpoint
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: books-frontend
