kubernetes/service-get.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-get-service
spec:
  type: ClusterIP
  ports:
    - name: books-get-endpoint
      port: 80
      targetPort: 3030
      protocol: TCP
  selector:
    app: books-get
