kubernetes/service-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  type: ClusterIP
  ports:
    - name: mongo-endpoint
      port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongo
