kubernetes/service-post.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-post-service
spec:
  type: ClusterIP
  ports:
    - name: books-post-endpoint
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: books-post
