kubernetes/service-put.yaml
apiVersion: v1
kind: Service
metadata:
  name: books-put-service
spec:
  type: ClusterIP
  ports:
    - name: books-put-endpoint
      port: 8080
      targetPort: 3030
      protocol: TCP
  selector:
    app: books-put
