kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exercise-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/configuration-snippet: |
      internal;
      rewrite ^ $original_uri break;
    nginx.org/server-snippets: |
      
      location ~ /api/books/(.*) {
        if ($request_method = 'PUT') {
          rewrite ^/(.*) /$1 break;
          proxy_pass http://books-put-service:8080;
        }
        if ($request_method = 'DELETE') {
          rewrite ^/(.*) /$1 break;
          proxy_pass http://books-delete-service:8080;
        }
      }
      
      location /api/books {
        if ($request_method = 'GET') {
          proxy_pass http://books-get-service:8080;
        }
        if ($request_method = 'POST') {
          proxy_pass http://books-post-service:8080;
        }
      }
      
     

spec:
  rules:
      - host: 20.54.81.54.nip.io
        http:
          paths:
            - path: /
              pathType: Exact
              backend:
                service:
                  name: books-frontend-service
                  port:
                    number: 8080
  ingressClassName: nginx
